<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15sp"
    app:srcCompat="@drawable/fondo"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#092CED"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textAlignment="center"
        android:padding="20sp"
        android:text="@string/scroll_view"
        android:textStyle="italic|bold"

        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:text="@string/formulario"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#092CED"/>

            <EditText
                android:id="@+id/editTextText"
                style="@style/texto"
                android:hint="@string/nombre"
                android:inputType="text"
                android:autofillHints="nombre" />

            <EditText
                android:id="@+id/editTextText2"
                style="@style/texto"
                android:hint="@string/apellido"
                android:inputType="text"
                android:autofillHints="apellido" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                style="@style/texto"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress" />

            <EditText
                android:id="@+id/editTextTextPassword"
                style="@style/texto"
                android:hint="@string/ingrese_su_contrase_a"
                android:inputType="textPassword"
                android:autofillHints="password" />
            <EditText
                android:id="@+id/Password"
                style="@style/texto"
                android:hint="@string/confirme_su_contrase_a"
                android:inputType="textPassword"
                android:autofillHints="password" />

            <EditText
                android:id="@+id/editTextDate"
                style="@style/texto"
                android:hint="@string/fecha_de_nacimiento"
                android:inputType="date"
                android:autofillHints="date" />

            <EditText
                android:id="@+id/editTextPhone"
                style="@style/texto"
                android:hint="@string/numero_de_telefono"
                android:inputType="phone"
                android:autofillHints="phone" />
            <TextView
                android:id="@+id/textView4"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/escoge_tu_avatar" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" >


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_weight="1"
                        style="@style/avatar"
                        android:src="@drawable/avatar_1" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_weight="1"
                        style="@style/avatar"
                        android:src="@drawable/avatar_2" />

                    <ImageView
                        android:id="@+id/imageView5"
                        style="@style/avatar"
                        android:layout_weight="1"
                        android:src="@drawable/avatar_3" />

                    <ImageView
                        android:id="@+id/imageView6"
                        style="@style/avatar"
                        android:layout_weight="1"
                        android:src="@drawable/avatar_4" />

                    <ImageView
                        android:id="@+id/imageView7"
                        style="@style/avatar"
                        android:layout_weight="1"
                        android:src="@drawable/avatar_5" />

                    <ImageView
                        android:id="@+id/imageView8"
                        style="@style/avatar"
                        android:layout_weight="1"
                        android:src="@drawable/avatar_6" />

                    <ImageView
                        android:id="@+id/imageView9"
                        style="@style/avatar"
                        android:layout_weight="1"
                        android:src="@drawable/avatar_7" />
                </LinearLayout>
            </HorizontalScrollView>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_marginTop="25sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deseo_ser_contactado_por"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="20sp"/>

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/whatsapp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/correo_electronico" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="@string/numero_de_contacto" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/acepto_terminos_y_condiciones" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/deseo_recibir_alertas_de_esta_paguina" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10sp"
                    android:layout_marginTop="20sp"
                    android:backgroundTint="@color/black"
                    android:textSize="20sp"
                    android:text="@string/registrarme" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</LinearLayout>